增加部分coze 流程

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -60,6 +60,8 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V4_DEV)
     set(BOARD_TYPE "kevin-sp-v4-dev")
 elseif(CONFIG_BOARD_TYPE_KEVIN_YUYING_313LCD)
     set(BOARD_TYPE "kevin-yuying-313lcd")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_DEV)
+    set(BOARD_TYPE "gizwits-dev")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
