增加部分音频播放

--- a/main/boards/gizwits-gokit5/config.json
+++ b/main/boards/gizwits-gokit5/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "gizwits-dev",
+            "name": "gizwits-gokit5",
             "sdkconfig_append": []
         }
     ]
