--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -9,6 +9,9 @@ dependencies:
   espressif/esp_lcd_panel_io_additions: "^1.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~2.3.2"
+  # esp-wifi-connect:
+  #   git: https://github.com/gizwits/esp-wifi-connect.git
+  #   version: "2.3.2"
   78/esp-opus-encoder: "~2.3.1"
   78/esp-ml307: "~1.9.0"
   78/xiaozhi-fonts: "~1.3.2"
