暂时屏蔽 OTA 增加 mqtt 和 api

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -12,11 +12,11 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "protocols/protocol.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
-            "iot/giz_mqtt.cc"
-            "iot/giz_api.cc"
-            "iot/protocol/iot_protocol.cc"
+            "server/giz_mqtt.cc"
+            "server/giz_api.cc"
+            "server/protocol/iot_protocol.cc"
             "camera/board_camera.cc"
-            "mcp/mcp.cc"
+            "protocols/mcp.cc"
             "auth.cc"
             "system_info.cc"
             "application.cc"
