--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,6 +1,6 @@
 ## IDF Component Manager Manifest File
 dependencies:
-  espressif/esp32-camera: "^2.0.15"
+  # espressif/esp32-camera: "^2.0.15"
   waveshare/esp_lcd_sh8601: "1.0.2"
   espressif/esp_lcd_ili9341: "==1.2.0"
   espressif/esp_lcd_gc9a01: "^2.0.1"
@@ -9,9 +9,7 @@ dependencies:
   espressif/esp_io_expander_tca9554: "==2.0.0"
   espressif/esp_lcd_panel_io_additions: "^1.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
-  esp-wifi-connect-next:
-    git: https://github.com/gizwits/esp-wifi-connect-next.git
-    version: "2.3.3"
+  kylewang4929/esp-wifi-connect-next: "2.4.6"
   78/esp-opus-encoder: "~2.3.1"
   78/esp-ml307: "~1.9.0"
   78/xiaozhi-fonts: "~1.3.2"
