--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "display/display.cc"
             "display/lcd_display.cc"
             "display/oled_display.cc"
+            "display/eye_display.cc"
             "protocols/protocol.cc"
             "protocols/websocket_protocol.cc"
             "iot/thing.cc"
