--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -109,6 +109,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28)
     set(BOARD_TYPE "esp32-s3-xunguan-1.28")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28_OLD)
+    set(BOARD_TYPE "esp32-s3-xunguan-1.28-old")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
     set(BOARD_TYPE "waveshare-s3-touch-amoled-1.75")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
