增加提示音，增加播放 mp3

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
             "server/giz_mqtt.cc"
+            "player/player.cc"
             "server/giz_api.cc"
             "server/protocol/iot_protocol.cc"
             "protocols/mcp.cc"
