--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "display/eye_display.cc"
             "display/eye_toy_display.cc"
             "protocols/protocol.cc"
+            "watchdog.cc"
             "protocols/websocket_protocol.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
