--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -55,6 +55,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32_LCD)
     set(BOARD_TYPE "bread-compact-esp32-lcd")
 elseif(CONFIG_BOARD_TYPE_DF_K10)
     set(BOARD_TYPE "df-k10")
+elseif(CONFIG_BOARD_TYPE_DOIT_AI_01_KIT)
+    set(BOARD_TYPE "doit-ai-01-kit")
 elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE)
     set(BOARD_TYPE "doit-esp32s3-eye")
 elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_6824)
