--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "player/player.cc"
             "server/giz_api.cc"
             "server/protocol/iot_protocol.cc"
+            "server/protocol/ota_protocol.cc"
             "protocols/mcp.cc"
             "auth.cc"
             "system_info.cc"
