--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,10 +15,7 @@ dependencies:
   78/xiaozhi-fonts: ~1.3.2
   espressif/led_strip: ^2.5.5
   espressif/esp_codec_dev: ~1.3.2
-  espressif/esp-sr: 
-    version: "^2.0.5"
-    rules: # will add "optional_component" only when all if clauses are True
-      - if: "target in [esp32, esp32s3]" # supports boolean operator ==, !=, in, not in.
+  espressif/esp-sr: ~2.1.1
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
   espressif/esp32-camera: ^2.0.15
