--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -118,6 +118,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
     set(BOARD_TYPE "esp-spot-s3")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824)
+    set(BOARD_TYPE "gizwits-c2-6824")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28)
     set(BOARD_TYPE "esp32-s3-xunguan-1.28")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28_OLD)
