--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -54,8 +54,6 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32)
     set(BOARD_TYPE "bread-compact-esp32")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32_LCD)
     set(BOARD_TYPE "bread-compact-esp32-lcd")
-elseif(CONFIG_BOARD_TYPE_DF_K10)
-    set(BOARD_TYPE "df-k10")
 elseif(CONFIG_BOARD_TYPE_DOIT_AI_01_KIT)
     set(BOARD_TYPE "doit-ai-01-kit")
 elseif(CONFIG_BOARD_TYPE_DOIT_AI_01_KIT_NFC)
@@ -70,18 +68,6 @@ elseif(CONFIG_BOARD_TYPE_ESP_BOX)
     set(BOARD_TYPE "esp-box")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_LITE)
     set(BOARD_TYPE "esp-box-lite")
-elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
-    set(BOARD_TYPE "kevin-box-1")
-elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
-    set(BOARD_TYPE "kevin-box-2")
-elseif(CONFIG_BOARD_TYPE_KEVIN_C3)
-    set(BOARD_TYPE "kevin-c3")
-elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V3_DEV)
-    set(BOARD_TYPE "kevin-sp-v3-dev")
-elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V4_DEV)
-    set(BOARD_TYPE "kevin-sp-v4-dev")
-elseif(CONFIG_BOARD_TYPE_KEVIN_YUYING_313LCD)
-    set(BOARD_TYPE "kevin-yuying-313lcd")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_GOKIT5)
     set(BOARD_TYPE "gizwits-gokit5")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
@@ -120,6 +106,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824)
     set(BOARD_TYPE "gizwits-c2-6824")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_TOY)
+    set(BOARD_TYPE "gizwits-c2-6824-toy")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28)
     set(BOARD_TYPE "esp32-s3-xunguan-1.28")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28_OLD)
@@ -152,16 +140,6 @@ elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
     set(BOARD_TYPE "movecall-moji-esp32s3")
     elseif(CONFIG_BOARD_TYPE_MOVECALL_CUICAN_ESP32S3)
     set(BOARD_TYPE "movecall-cuican-esp32s3")
-elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3)
-    set(BOARD_TYPE "atk-dnesp32s3")
-elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX)
-    set(BOARD_TYPE "atk-dnesp32s3-box")
-elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX0)
-    set(BOARD_TYPE "atk-dnesp32s3-box0")
-elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3M_WIFI)
-    set(BOARD_TYPE "atk-dnesp32s3m-wifi")
-elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3M_4G)
-    set(BOARD_TYPE "atk-dnesp32s3m-4g")
 elseif(CONFIG_BOARD_TYPE_DU_CHATX)
     set(BOARD_TYPE "du-chatx")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
