--- a/main/boards/esp32-s3-xunguan-1.28/config.json
+++ b/main/boards/esp32-s3-xunguan-1.28/config.json
@@ -4,9 +4,9 @@
         {
             "name": "esp32-s3-xunguan-1.28",
             "sdkconfig_append": [
-                "CONFIG_ESPTOOLPY_FLASHSIZE_8MB=y",
+                "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions_8M.csv\""
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions.csv\""
             ]
         }
     ]
