增加 ntp 增加 ip 参数

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "ota.cc"
             "settings.cc"
             "background_task.cc"
+            "ntp.cc"
             "main.cc"
             )
 
