增加唤醒词

--- a/main/boards/gizwits-c2-6824/config.json
+++ b/main/boards/gizwits-c2-6824/config.json
@@ -2,7 +2,7 @@
     "target": "esp32c2",
     "builds": [
         {
-            "name": "doit-esp32s3-eye",
+            "name": "gizwits-c2-6824",
             "sdkconfig_append": [
                 "CONFIG_BOARD_TYPE_DOIT_AI_01_KIT=y",
                 "CONFIG_MQTT_USE_CUSTOM_CONFIG=y",
