--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -73,6 +73,8 @@ elseif(CONFIG_BOARD_TYPE_GIZWITS_GOKIT5)
     set(BOARD_TYPE "gizwits-gokit5")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_4KEY)
     set(BOARD_TYPE "gizwits-4key")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_4KEY_ML307)
+    set(BOARD_TYPE "gizwits-4key-ml307")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
@@ -99,8 +101,6 @@ elseif(CONFIG_BOARD_TYPE_ATOMMATRIX_ECHO_BASE)
     set(BOARD_TYPE "atommatrix-echo-base")
 elseif(CONFIG_BOARD_TYPE_XMINI_C3)
     set(BOARD_TYPE "xmini-c3")
-elseif(CONFIG_BOARD_TYPE_ESP32S3_KORVO2_V3)
-    set(BOARD_TYPE "esp32s3-korvo2-v3")
 elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
     set(BOARD_TYPE "esp-sparkbot")
 elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
