--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -11,7 +11,7 @@ dependencies:
   # 78/esp-wifi-connect: ~2.4.2
   kylewang4929/esp-wifi-connect-next: "3.0.7"
   78/esp-opus-encoder: ~2.3.2
-  kylewang4929/esp-ml307: "~2.2.2"
+  78/esp-ml307: "~3.2.4"
   78/xiaozhi-fonts: ~1.3.2
   espressif/led_strip: ^2.5.5
   espressif/esp_codec_dev: ~1.3.2
