修正电量检测

--- a/main/boards/esp32-s3-xunguan-1.28/config.json
+++ b/main/boards/esp32-s3-xunguan-1.28/config.json
@@ -6,7 +6,8 @@
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions.csv\""
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions.csv\"",
+                "CONFIG_LOG_DEFAULT_LEVEL_NONE=y"
             ]
         }
     ]
