--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -14,7 +14,10 @@ dependencies:
   78/esp-opus-encoder: ~2.4.0
   78/xiaozhi-fonts: ~1.3.2
   espressif/led_strip: ^2.5.5
-  espressif/esp_codec_dev: ~1.3.6
+  espressif/esp_codec_dev: 
+    version: "~1.3.6"
+    rules: 
+      - if: "target in [esp32, esp32s3, esp32c3]"
   espressif/esp-sr: 
     version: "^2.1.4"
     rules: # will add "optional_component" only when all if clauses are True
