--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES "audio/audio_codec.cc"
             "led/circular_strip.cc"
             "led/gpio_led.cc"
             "display/display.cc"
+            "display/eye_display.cc"
             "display/lcd_display.cc"
             "display/oled_display.cc"
             "display/eye_toy_single_display.cc"
