灯驱动 颜色&亮度OK

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -35,9 +35,10 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "main.cc"
             "factory_test/factory_test.cc"
             "factory_test/test_uart.cc"
+            "custom/led_signal.cc"
             )
 
-set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing")
+set(INCLUDE_DIRS "." "display" "audio_codecs" "protocols" "audio_processing" "custom")
 
 # 添加 IOT 相关文件
 file(GLOB IOT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/iot/things/*.cc)
