--- a/main/boards/gizwits-4key-ml307/config.json
+++ b/main/boards/gizwits-4key-ml307/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "gizwits-4key",
+            "name": "gizwits-4key-ml307",
             "sdkconfig_append": [
                 "CONFIG_CODEC_ES8311_SUPPORT=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=y"
