--- a/main/boards/gizwits-4key-ml307/config.json
+++ b/main/boards/gizwits-4key-ml307/config.json
@@ -7,6 +7,7 @@
                 "CONFIG_CODEC_ES8311_SUPPORT=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=y",
                 "CONFIG_CONSOLE_UART_NONE=y",
+                "CONFIG_ESP_CONSOLE_NONE=y",
                 "CONFIG_ESP_CONSOLE_UART_NONE=y"
             ]
         }
