gizwits-s3-vb6824-lcd编译通过，待调试

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -66,6 +66,8 @@ elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE)
     set(BOARD_TYPE "doit-esp32s3-eye")
 elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_6824)
     set(BOARD_TYPE "doit-esp32s3-eye-6824")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_S3_VB6824_LCD)
+    set(BOARD_TYPE "gizwits-s3-vb6824-lcd")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
     set(BOARD_TYPE "esp-box-3")
 elseif(CONFIG_BOARD_TYPE_ESP_BOX)
