--- a/main/boards/gizwits-s3-vb6824-lcd/config.json
+++ b/main/boards/gizwits-s3-vb6824-lcd/config.json
@@ -2,12 +2,12 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-xunguan-1.28",
+            "name": "gizwits-s3-vb6824-lcd",
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
-                "CONFIG_USE_AUDIO_PROCESSOR=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions.csv\"",
-                "CONFIG_LOG_DEFAULT_LEVEL_NONE=y"
+                "CONFIG_LOG_DEFAULT_LEVEL_NONE=y",
+                "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y"
             ]
         }
     ]
