--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -10,7 +10,7 @@ dependencies:
   78/esp_lcd_nv3023: ~1.0.0
   # 78/esp-wifi-connect: ~2.4.2
   kylewang4929/esp-wifi-connect-next: "3.1.0"
-  kylewang4929/esp-ml307: ~3.2.7
+  78/esp-ml307: ~3.2.6
   78/esp-opus-encoder: ~2.4.0
   78/xiaozhi-fonts: ~1.3.2
   espressif/led_strip: ^2.5.5
