--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -74,6 +74,8 @@ elseif(CONFIG_BOARD_TYPE_ESP_BOX_LITE)
     set(BOARD_TYPE "esp-box-lite")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_GOKIT5)
     set(BOARD_TYPE "gizwits-gokit5")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_S3_LCD)
+    set(BOARD_TYPE "gizwits-s3-lcd")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_4KEY)
     set(BOARD_TYPE "gizwits-4key")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
