--- a/main/boards/gizwits-s3-vb6824-lcd/config.json
+++ b/main/boards/gizwits-s3-vb6824-lcd/config.json
@@ -7,7 +7,8 @@
                 "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions.csv\"",
                 "CONFIG_LOG_DEFAULT_LEVEL_NONE=y",
-                "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y"
+                "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y",
+                "CONFIG_LV_FONT_MONTSERRAT_22=y"
             ]
         }
     ]
