307 增加串口可配置 增加软串口

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -115,6 +115,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824)
     set(BOARD_TYPE "gizwits-c2-6824")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_ML307)
+    set(BOARD_TYPE "gizwits-c2-6824-ml307")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_TOY)
     set(BOARD_TYPE "gizwits-c2-6824-toy")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28)
