--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -115,7 +115,7 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824)
     set(BOARD_TYPE "gizwits-c2-6824")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_LVLIN)
-    set(BOARD_TYPE "gizwits-c2-6824_lvlin")
+    set(BOARD_TYPE "gizwits-c2-6824-lvlin")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_TOY)
     set(BOARD_TYPE "gizwits-c2-6824-toy")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_XUNGUAN_AMOLED_1_28)
