--- a/main/boards/gizwits-c2-6824/config.json
+++ b/main/boards/gizwits-c2-6824/config.json
@@ -13,7 +13,8 @@
                 "CONFIG_ESP32C2_REV_MIN_FULL=200",
                 "CONFIG_ESP_REV_MIN_FULL=200",
                 "CONFIG_USE_EYE_STYLE_VB6824=y",
-                "CONFIG_USE_AUDIO_PROCESSOR=n"
+                "CONFIG_USE_AUDIO_PROCESSOR=n",
+                "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y"
             ]
         }
     ]
