--- a/main/boards/gizwits-4key/config.json
+++ b/main/boards/gizwits-4key/config.json
@@ -5,7 +5,8 @@
             "name": "gizwits-4key",
             "sdkconfig_append": [
                 "CONFIG_CODEC_ES8311_SUPPORT=y",
-                "CONFIG_USE_AUDIO_PROCESSOR=y"
+                "CONFIG_USE_AUDIO_PROCESSOR=y",
+                "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=n"
             ]
         }
     ]
