--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES "audio/audio_codec.cc"
             "display/display.cc"
             "display/lcd_display.cc"
             "display/oled_display.cc"
+            "display/eye_display.cc"
             "display/eye_toy_single_display.cc"
             "display/eye_toy_display.cc"
             "protocols/protocol.cc"
