--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -214,6 +214,8 @@ elseif(CONFIG_BOARD_TYPE_JIUCHUAN)
     set(BOARD_TYPE "jiuchuan-s3")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_YOUQU)
     set(BOARD_TYPE "gizwits-youqu")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_4KEY)
+    set(BOARD_TYPE "gizwits-4key")
 elseif(CONFIG_BOARD_TYPE_LABPLUS_MPYTHON_V3)
     set(BOARD_TYPE "labplus-mpython-v3") 
 elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
