增加 lvgl 自定义内存分配模块

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCES "audio/audio_codec.cc"
             "display/oled_display.cc"
             "display/eye_toy_single_display.cc"
             "display/eye_toy_display.cc"
+            "display/lv_mem_psram.c"
             "protocols/protocol.cc"
             "watchdog.cc"
             "protocols/websocket_protocol.cc"
