--- a/main/boards/gizwits-youqu/config.json
+++ b/main/boards/gizwits-youqu/config.json
@@ -5,7 +5,9 @@
             "name": "gizwits-youqu",
             "sdkconfig_append": [
                 "CONFIG_CODEC_ES8311_SUPPORT=y",
-                "CONFIG_USE_AUDIO_PROCESSOR=y"
+                "CONFIG_USE_AUDIO_PROCESSOR=y",
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v1/16m.csv\"",
+                "CONFIG_PARTITION_TABLE_CUSTOM=y"
             ]
         }
     ]
