--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -121,6 +121,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824)
     set(BOARD_TYPE "gizwits-c2-6824")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_XINGBAO)
+    set(BOARD_TYPE "gizwits-c2-6824-xingbao")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_CWH)
     set(BOARD_TYPE "gizwits-c2-6824-cwh")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_ML307)
