--- a/main/boards/gizwits-s3-vb6824-st7735s/config.json
+++ b/main/boards/gizwits-s3-vb6824-st7735s/config.json
@@ -9,6 +9,7 @@
               "CONFIG_LV_FONT_MONTSERRAT_22=y",
               "CONFIG_USE_EYE_STYLE_VB6824=y",
               "CONFIG_USE_AUDIO_PROCESSOR=n",
+              "CONFIG_USE_AFE_WAKE_WORD=n",
               "CONFIG_VB6824_UART_TASK_STACK_SIZE=8192",
               "CONFIG_VB6824_SEND_USE_TASK=y",
               "CONFIG_VB6824_SEND_TASK_STACK_SIZE=4096",
