--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES "audio/audio_codec.cc"
             "display/eye_toy_display.cc"
             "display/eye_display.cc"
             "display/eye_display_horizontal.cc"
+            "display/eye_display_horizontal_emojis.cc"
             "display/lottie_display.cc"
             "display/lv_mem_psram.c"
             "protocols/protocol.cc"
