--- a/main/boards/gizwits-youqu/config.json
+++ b/main/boards/gizwits-youqu/config.json
@@ -7,7 +7,8 @@
                 "CONFIG_CODEC_ES8311_SUPPORT=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v1/16m.csv\"",
-                "CONFIG_PARTITION_TABLE_CUSTOM=y"
+                "CONFIG_PARTITION_TABLE_CUSTOM=y",
+                "CONFIG_LANGUAGE_EN_US=y"
             ]
         }
     ]
