--- a/main/boards/gizwits-c2-6824-toy/config.json
+++ b/main/boards/gizwits-c2-6824-toy/config.json
@@ -13,7 +13,9 @@
                 "CONFIG_ESP32C2_REV_MIN_FULL=200",
                 "CONFIG_ESP_REV_MIN_FULL=200",
                 "CONFIG_USE_EYE_STYLE_VB6824=y",
-                "CONFIG_USE_AUDIO_PROCESSOR=n"
+                "CONFIG_USE_AUDIO_PROCESSOR=n",
+                "CONFIG_TMP_PRODUCT_TEST_WIFI=\"FACTORY_TEST#@#@\"",
+                "CONFIG_TMP_PRODUCT_TEST_WIFI_PASSWORD=\"12345678\""
             ]
         }
     ]
