--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -129,6 +129,8 @@ endif()
 # 根据Kconfig选择语言目录
 if(CONFIG_LANGUAGE_ZH_CN)
     set(LANG_DIR "zh-CN")
+elseif(CONFIG_LANGUAGE_ZH_CN_LVLIN)
+    set(LANG_DIR "zh-CN-LVLIN")
 elseif(CONFIG_LANGUAGE_ZH_TW)
     set(LANG_DIR "zh-TW")
 elseif(CONFIG_LANGUAGE_EN_US)
