--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -95,6 +95,8 @@ elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_LIGHT_ROBOT)
     set(BOARD_TYPE "gizwits-c2-6824-light-robot")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_ML307)
     set(BOARD_TYPE "gizwits-c2-6824-ml307")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_MOTOR)
+    set(BOARD_TYPE "gizwits-c2-6824-motor")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_LVLIN)
     set(BOARD_TYPE "gizwits-c2-6824-lvlin")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_TOY)
