--- a/main/boards/gizwits-s3-vb6824-st7735s/config.json
+++ b/main/boards/gizwits-s3-vb6824-st7735s/config.json
@@ -16,7 +16,7 @@
               "CONFIG_ESP_TIMER_TASK_STACK_SIZE=4096",
               "CONFIG_USE_AUDIO_PROCESSOR=n",
               "CONFIG_USE_AFE_WAKE_WORD=n",
-              "CONFIG_PRODUCT_TEST_WIFI=\"XUNGUAN_TEST#@#@\"",
+              "CONFIG_PRODUCT_TEST_WIFI=\"FACTORY_TEST#@#@\"",
               "CONFIG_PRODUCT_TEST_WIFI_PASSWORD=\"12345678\""
           ]
       }
