--- a/main/boards/gizwits-c2-6824-lvlin/config.json
+++ b/main/boards/gizwits-c2-6824-lvlin/config.json
@@ -14,7 +14,8 @@
                 "CONFIG_USE_EYE_STYLE_VB6824=y",
                 "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=n",
-                "CONFIG_LANGUAGE_ZH_CN_LVLIN=y"
+                "CONFIG_LANGUAGE_ZH_CN_LVLIN=y",
+                "CONFIG_BUTTON_SHORT_PRESS_TIME_MS=500"
             ]
         }
     ]
