--- a/main/boards/gizwits-c2-6824-lvlin/config.json
+++ b/main/boards/gizwits-c2-6824-lvlin/config.json
@@ -15,7 +15,9 @@
                 "CONFIG_USE_AUDIO_CODEC_ENCODE_OPUS=y",
                 "CONFIG_USE_AUDIO_PROCESSOR=n",
                 "CONFIG_LANGUAGE_ZH_CN_LVLIN=y",
-                "CONFIG_BUTTON_SHORT_PRESS_TIME_MS=500"
+                "CONFIG_BUTTON_SHORT_PRESS_TIME_MS=500",
+                "CONFIG_TMP_PRODUCT_TEST_WIFI=\"FACTORY_TEST#@#@\"",
+                "CONFIG_TMP_PRODUCT_TEST_WIFI_PASSWORD=\"12345678\""
             ]
         }
     ]
