--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -74,6 +74,8 @@ elseif(CONFIG_BOARD_TYPE_DOIT_ESP32S3_EYE_6824)
     set(BOARD_TYPE "doit-esp32s3-eye-6824")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_S3_VB6824_LCD)
     set(BOARD_TYPE "gizwits-s3-vb6824-lcd")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_S3_RH)
+    set(BOARD_TYPE "gizwits-s3-rh")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_S3_VB6824_ST7735S)
     set(BOARD_TYPE "gizwits-s3-vb6824-st7735s")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_GOKIT5)
