增加软串口版本，限流信息从 board 拿

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -102,6 +102,8 @@ elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_LVLIN)
     set(BOARD_TYPE "gizwits-c2-6824-lvlin")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_TOY)
     set(BOARD_TYPE "gizwits-c2-6824-toy")
+elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_UART)
+    set(BOARD_TYPE "gizwits-c2-6824-uart")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_BIRDCAGE)
     set(BOARD_TYPE "gizwits-c2-6824-birdcage")
 elseif(CONFIG_BOARD_TYPE_GIZWITS_C2_6824_DRF_W300CA)
